fixed overflow issue, but media work needs to be done for mobile

--- a/sassy.scss
+++ b/sassy.scss
@@ -9,29 +9,24 @@
 $thick-font: "Bungee Shade", cursive;
 $retro-font: "Monoton", cursive;
 
-#grid-div * {
-  // outline: 2px solid red;
-}
-
 #grid-div {
   display: grid;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 4fr;
   //gapping
   grid-gap: 2em;
-  padding: 1em;
   border: 1em outset orange;
+  padding: 1.2em;
 }
 
 //begin degree-div
 #degree-div {
   // 1/4 width space
   //rowST / colST / rowEND / colEND
-  grid-area: 1 / 1 / 2/ 2;
-  width: 100%;
-  //   height: 100%;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
   border: 0.5rem solid black;
   border-radius: 0.25em;
 
@@ -41,7 +36,7 @@ $retro-font: "Monoton", cursive;
   align-items: center;
   text-align: center;
 
-  font-size: 4em;
+  font-size: 2.5rem;
   font-family: $thick-font;
 }
 #degree-p {
@@ -52,7 +47,7 @@ $retro-font: "Monoton", cursive;
   transition: color 0.5s linear;
 }
 #city-text {
-  font-size: 0.5em !important;
+  font-size: 1.8rem !important;
   line-height: 1.5ch;
   margin: 0 auto;
   padding: 10px 10px;
@@ -69,22 +64,17 @@ $retro-font: "Monoton", cursive;
 //begin search-div
 #search-div {
   grid-column: 2 / 5;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  grid-row: 1 / 2;
 }
 #form {
   margin-top: 2em;
-  width: 100%;
   display: flex;
 }
 #form input {
   order: 2;
   padding: 0;
   padding-left: 2em;
-  margin: 0;
+  margin-right: 2em;
   width: 100%;
   border: 0.15rem solid orange;
   border-radius: 2em;
@@ -110,39 +100,36 @@ $retro-font: "Monoton", cursive;
 //end search-div
 //begin forecast-div
 #forecast-div {
-  width: 100%;
+  position: relative;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
   height: 100%;
+  overflow-y: scroll;
   border: 0.5em solid black;
   border-radius: 0.25em;
-  grid-row: 2 /3;
 }
 #header-box {
   display: flex;
+  height: 20%;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 20%;
   border-bottom: 0.25em dashed black;
 }
 #forecast-word {
-  // height: 20%;
   text-align: center;
   font-family: $thick-font;
 }
 #forecast-ul {
-  width: 100%;
-  height: 80%;
   display: flex;
   flex-direction: column;
   list-style-type: none;
+  height: 80%;
   li {
-    width: 100%;
-    // flex: 1;
     height: calc(100% / 7);
 
     display: flex;
-    // gap: 10%;
     justify-content: space-around;
+    padding-block: 2rem;
     align-items: center;
     font-size: 1.5em;
     font-weight: 600;
@@ -158,11 +145,10 @@ $retro-font: "Monoton", cursive;
 }
 
 #maps-div {
-  grid-area: 2 / 2 / 3/ 5;
+  grid-row: 2 / 3;
+  grid-column: 2 / 5;
   border: 0.25em solid black;
   border-radius: 0.25em;
-  width: 100%;
-  height: 100%;
 }
 
 //popup
