--- a/style.css
+++ b/style.css
@@ -8,18 +8,18 @@
 
 #grid-div {
   display: grid;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 4fr;
   grid-gap: 2em;
-  padding: 1em;
   border: 1em outset orange;
+  padding: 1.2em;
 }
 
 #degree-div {
-  grid-area: 1/1/2/2;
-  width: 100%;
+  grid-row: 1/2;
+  grid-column: 1/2;
   border: 0.5rem solid black;
   border-radius: 0.25em;
   display: flex;
@@ -27,7 +27,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 4em;
+  font-size: 2.5rem;
   font-family: "Bungee Shade", cursive;
 }
 
@@ -39,7 +39,7 @@
 }
 
 #city-text {
-  font-size: 0.5em !important;
+  font-size: 1.8rem !important;
   line-height: 1.5ch;
   margin: 0 auto;
   padding: 10px 10px;
@@ -54,16 +54,11 @@
 
 #search-div {
   grid-column: 2/5;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  grid-row: 1/2;
 }
 
 #form {
   margin-top: 2em;
-  width: 100%;
   display: flex;
 }
 
@@ -71,7 +66,7 @@
   order: 2;
   padding: 0;
   padding-left: 2em;
-  margin: 0;
+  margin-right: 2em;
   width: 100%;
   border: 0.15rem solid orange;
   border-radius: 2em;
@@ -98,19 +93,20 @@
 }
 
 #forecast-div {
-  width: 100%;
+  position: relative;
+  grid-row: 2/3;
+  grid-column: 1/2;
   height: 100%;
+  overflow-y: scroll;
   border: 0.5em solid black;
   border-radius: 0.25em;
-  grid-row: 2/3;
 }
 
 #header-box {
   display: flex;
+  height: 20%;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 20%;
   border-bottom: 0.25em dashed black;
 }
 
@@ -120,17 +116,16 @@
 }
 
 #forecast-ul {
-  width: 100%;
-  height: 80%;
   display: flex;
   flex-direction: column;
   list-style-type: none;
+  height: 80%;
 }
 #forecast-ul li {
-  width: 100%;
   height: 14.2857142857%;
   display: flex;
   justify-content: space-around;
+  padding-block: 2rem;
   align-items: center;
   font-size: 1.5em;
   font-weight: 600;
@@ -145,11 +140,10 @@
 }
 
 #maps-div {
-  grid-area: 2/2/3/5;
+  grid-row: 2/3;
+  grid-column: 2/5;
   border: 0.25em solid black;
   border-radius: 0.25em;
-  width: 100%;
-  height: 100%;
 }
 
 .leaflet-popup-content-wrapper {
